Updated The File

--- a/twitter_logging_in_and_infinite_scrolling.ipynb
+++ b/twitter_logging_in_and_infinite_scrolling.ipynb
@@ -81,7 +81,7 @@
     "# locating username and password inputs and sending text to the inputs\n",
     "# username\n",
     "username = driver.find_element(By.XPATH, '//input[@autocomplete =\"username\"]')\n",
-    "username.send_keys(\"GhostmanKe\")  # Write Email Here\n",
+    "username.send_keys(\"your_user_name\")  # Write Email or user name Here\n",
     "# username.send_keys(os.environ.get(\"TWITTER_USER\"))\n",
     "\n",
     "# Clicking on \"Next\" button\n",
@@ -93,7 +93,7 @@
     "\n",
     "# password\n",
     "password = driver.find_element(By.XPATH, '//input[@autocomplete =\"current-password\"]')\n",
-    "password.send_keys(\"Ghostman254\")  # Write Password Here\n",
+    "password.send_keys(\"your_password_here\")  # Write Password Here\n",
     "# password.send_keys(os.environ.get(\"TWITTER_PASS\"))\n",
     "\n",
     "# locating login button and then clicking on it\n",
